ManagerParsing - using control choose Parser
ADD:

Two Parsers and manager to them

--- a/Converter/Converter.csproj
+++ b/Converter/Converter.csproj
@@ -152,18 +152,24 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ConvertController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\InputText.cs" />
-    <Compile Include="Models\TypeFile.cs" />
+    <Compile Include="Models\InputData.cs" />
+    <Compile Include="Models\Phrase.cs" />
+    <Compile Include="Models\TypeConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
+    <Compile Include="Service\Csv.cs" />
+    <Compile Include="Service\Interface\IConverter.cs" />
+    <Compile Include="Service\ManagerParsing.cs" />
+    <Compile Include="Service\Xml.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -202,6 +208,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Convert\TryConvert.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
