I did UTF8 instead of UTF16 in start declaration
I used a new overide Encoding method in class Utf8StringWriter. In
default StringWriter create file with UTF 16 declarations

--- a/Converter/Converter.csproj
+++ b/Converter/Converter.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Service\Csv.cs" />
     <Compile Include="Service\Interface\IConverter.cs" />
     <Compile Include="Service\ManagerParsing.cs" />
+    <Compile Include="Service\Utf8StringWriter.cs" />
     <Compile Include="Service\WorkWithText.cs" />
     <Compile Include="Service\Xml.cs" />
   </ItemGroup>
